add variation gallery support (provided by plugin woo-variation-gallery) into wc-frontend-manager

--- a/wp-content/themes/depot-child/style.css
+++ b/wp-content/themes/depot-child/style.css
@@ -152,3 +152,15 @@ Hide vendor edit button*/
 .wcfm_buttons{
   display: none;
 }
+
+
+/*************************************************/
+/* WCFM override styles */
+/*************************************************/
+/* Add product - variation gallery images */
+.le-variation-gallery .multi_input_block {
+  margin-left: 39%;
+  padding-left: 0;
+}
+
+
