--- a/wp-content/themes/depot-child/style.css
+++ b/wp-content/themes/depot-child/style.css
@@ -218,3 +218,8 @@ Hide vendor edit button*/
 #wcfm_products_manage_form_general_expander .select2-selection--multiple:after {
   top: 20px !important;
 }
+
+/* Fix checkout card name too long */
+tr.woocommerce-cart-form__cart-item > td.product-name {
+  max-width: 300px;
+}
